# simplet

./: .gitattributes  .gitignore  AUTHOR.md  Cargo.toml  LICENSE  OpenTranslation.py  README.md  __init__.py  __main__.py  base.py  cli.py  execu.bat  index.html  main.py  main.rs  nada.cpp  run.bash  run.bat  rust-toolchain  sample.cpp  tester.py
.fleet/: run.json
data/: __init__.py  checkconnection.py  constans.py  helptext.py  kernel.py  parse.py  update.py  urlretrieve.py  utilities.py  utilities2.py
data/chars/: .gitignore  __init__.py  body.py  chars.cpp  file.bat  result.h  setup.py
data/extensions/: __init__.py
data/extensions/Door/: door.tcl  extencion.json
data/extensions/OT English/: extencion.json
data/extensions/OT Spanish/: extencion.json
data/otcommands/: __init__.py  commands.py
data/otconsole/: __init__.py  console.py
data/otconsole/otcolorama/: .gitignore  __init__.py  ansi.py  ansitowin32.py  initialise.py  win32.py  winterm.py
data/otgraphic/: __init__.py  about.py  bindtext.tcl  boxcenter.py  combobox.py  complementtexts.tcl  load_image.tcl  menu.py  scrollbar.py  statusbar.py  statusbar.tcl  text.py  toplevel.py  utils.py  windows.py  windows.tcl
data/otgraphic/topconf/: __init__.py  boxcanvas.py  topbox.py
data/otyaml/: .gitignore
data/settings/: __init__.py  get_external.py  osinfo.py
data/settings/idiom/: __init__.py
data/translator/: __init__.py  record.py
data/utilities/src/: lib.rs
data/utilities2/: Cargo.toml
gui/: Cargo.toml  README.md  index.html
gui/src/: app.rs  lib.rs  main.rs
icons/: convert.py  main.py
otapplication/: __init__.py
public/: index.html
scripts/: dt_test.py  generate_engines.py
simplet/: README.md  __init__.py  __main__.py  base.py  requirements
src/: app.rs  engines.rs  icons.rs  lib.rs  main.rs  menu.rs
src/deep-translator/: Cargo.toml  README.md
src/deep_translator/: Cargo.toml
src/deep_translator/src/: lib.rs
src/deep_translator/src/translator/: engine.rs  mod.rs  qcri.rs
src/gui/: Cargo.toml  README.md
src/gui/src/: app.rs  icons.rs  lib.rs  main.rs  menu.rs  setting.rs
src/kernel/: README.md  __main__.py  base.py  langscode.py  requirements
(+5 files in other folders)
