[package]
name = "deep-translator"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "translate between different languages using multiple translators"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deeptrans"

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
#serde  = { version = "1.0.145", features = ["derive"]
#tokio   = { version = "1.21.2", features = ["full"] }
serde_json = "1.0.86"
clap       = "3.2.22"
scraper    = "0.13.0"
